--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
 
-  <link rel="icon" type="image" sizes="16x16" href="assets/img/pngwing.com.png">
+  <link rel="icon" type="image" sizes="16x16" href="assets/img/lamen.png">
 
 
 </head>
