Update developer link in footer

--- a/index.html
+++ b/index.html
@@ -1108,7 +1108,7 @@
     <p>© <span>Direitos Autorais</span> <strong class="px-1 sitename">Yummy Lamen.</strong> <span>Todos os direitos reservados</span></p>
     <div class="credits">
    
-      Desenvolvido por <a href="https://matheus-abib-portifolio.up.railway.app//" target="_blank">Matheus Abib</a>
+      Desenvolvido por <a href="https://matheus-abib-portfolio.netlify.app/" target="_blank">Matheus Abib</a>
     </div>
   </div>
 
